<!--
Team Cleanup
Curtis Ching                  n01274536
Kevin Daniel Delgado Toledo   n01323567
Manpreet Parmar               n01302460
-->
<resources>
    <string name="app_name">CleanCommunity</string>
    <string name="slogon">Cleaning the world. One paper cup at a time.</string>
    <string name="button_signup">SIGN UP</string>
    <string name="button_login">LOGIN</string>
    <string name="welcome">Welcome!</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="conPassword">Confirm password</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="checkbox">Stay signed in</string>
    <string name="wong_pass">Ouch,Wrong password!!!!!!!!!!!!</string>
    <string name="welcomemessage">Littering is slowly destroying the ecosystem, the beauty, and the life of our planet. The average distance someone carries litter before throwing it away is 12 paces. It\'s time to make a difference, lets do it together.</string>
    <string name="button_getstarted">Get Started</string>
    <string name="search">search</string>
    <string name="contributor">Contributor:</string>
    <string name="radius">Radius:</string>
    <string name="area_name">Area Name:</string>
    <string name="rating">Rating:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="okay" translatable="false">Okay</string>
    <string name="add">Add location</string>
    <string name="cancel">Cancel</string>
    <string name="next">next</string>
    <string name="light">Light mode</string>
    <string name="done">done</string>
    <string name="nick">Area Nickname</string>
    <string name="placeholder" translatable="false">placeholder</string>
    <string name="signout">SignOut</string>
    <string name="add_location">Add Location</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="gmailPassUpdate">If you have logged in via Gmail account, changing your password will not change your google account password, but will instead create an account for the app (if you don\'t have one already) with the new password. Are you okay with this?</string>
    <string name="send_coordinates">Send Coordinates</string>
    <string name="night_mode">Dark Mode</string>
    <string name="enter_rating">Please enter the desired rating</string>
    <string name="input_area_name">Enter the area name here</string>
    <string name="input_rating">Enter the rating here (1–10)</string>
    <string name="enter_email">Please enter your email to recover your password:</string>
    <string name="google">google</string>
    <string name="not_show_again">Do not show this dialog again.</string>
    <string name="tutorial_message">On the top Left corner you will find a button that will allow you to add a new location creating a red circle on the map, you will be able to move the circle to your desired location by clicking on the map. \n On the top right, another button will take you to your current location</string>
    <string name="tutorial_welcome">Welcome to CleanCommunity</string>
    <string name="default_location">Error grabbing location, default location will be given</string>
    <string name="area_radius_not_empty">Area Nickname and Rating cannot be empty</string>
    <string name="ratings_no_letters">Area Rating cannot contain letters</string>
    <string name="rating_between">The entered rating must be between 0 and 10</string>
    <string name="confirm_delete">Are you sure you want to delete the selected location?</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="we_sent_email_to">"We sent an email to : "</string>
    <string name="incorrect_email">"Email inputted incorrect : "</string>
    <string name="exit_app">Exiting the App</string>
    <string name="confirm_exit">Are you sure?</string>
    <string name="no">No</string>
    <string name="googleauth_error">Google authentication error</string>
    <string name="googleauth_good">Google Authentication Successful</string>
    <string name="fail_register">Failed to register, please input a proper email</string>
    <string name="register_good">Sign Up Successful</string>
    <string name="password_short">Password should be longer than 6 characters</string>
    <string name="input_password">Please input a Password</string>
    <string name="input_email">Please input your Email</string>
    <string name="input_name">Please input your Name</string>
    <string name="password_no_match">Passwords do not Match</string>
    <string name="login_fail">Failed to login</string>
    <string name="login_good">Login Successful</string>
    <string name="new_pass">Please input a new Password</string>
    <string name="pass_updated">Password successfully updated</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>

</resources>