<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_scr"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/base_screen">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="84dp"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="168dp"
        android:autofillHints=""
        android:background="@drawable/userinputtext"
        android:ems="10"
        android:inputType="textPersonName|textNoSuggestions"
        android:hint="@string/full_name"
        android:paddingStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="251dp"
        android:autofillHints=""
        android:background="@drawable/userinputtext"
        android:ems="10"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:hint="@string/email"
        android:paddingStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="334dp"
        android:autofillHints=""
        android:background="@drawable/userinputtext"
        android:ems="10"
        android:inputType="phone|textNoSuggestions"
        android:hint="@string/phone"
        android:paddingStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="417dp"
        android:autofillHints=""
        android:background="@drawable/userinputtext"
        android:ems="10"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:hint="@string/password"
        android:paddingStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/editConPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="500dp"
        android:autofillHints=""
        android:background="@drawable/userinputtext"
        android:ems="10"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:hint="@string/conPassword"
        android:paddingStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,RtlSymmetry" />

    <Button
        android:id="@+id/buttonsignup"
        android:layout_width="169dp"
        android:layout_height="42dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="579dp"
        android:background="#FFFFFF"
        android:onClick="adddata"
        android:text="@string/button_signup"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>