<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="?attr/colorPrimaryDark"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <TextView
        android:id="@+id/menuAppName"
        android:layout_width="176dp"
        android:layout_height="31dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="132dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menuUserEmail"
        android:layout_width="152dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="108dp"
        android:text="@string/email"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menuUserName"
        android:layout_width="152dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="84dp"
        android:text="@string/full_name"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>