<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings_Fragment">


    <Button
        android:id="@+id/passUpdate"
        android:layout_width="182dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="412dp"
        android:text="@string/update_password"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick" />

    <EditText
        android:id="@+id/editPassUpdate"
        android:layout_width="182dp"
        android:layout_height="39dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="412dp"
        android:autofillHints=""
        android:background="@drawable/userinputtext"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="text"
        android:paddingStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,RtlSymmetry" />

    <Button
        android:id="@+id/logout"
        android:layout_width="169dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginStart="121dp"
        android:layout_marginTop="498dp"
        android:text="@string/signout"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>