<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startup2_scr"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/startup_screen2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="380dp"
        android:text="@string/slogon"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonsignup"
        android:layout_width="169dp"
        android:layout_height="42dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="427dp"
        android:background="#FFFFFF"
        android:onClick="signUp"
        android:text="@string/button_signup"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="169dp"
        android:layout_height="42dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="501dp"
        android:background="#FFFFFF"
        android:onClick="login"
        android:text="@string/button_login"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignup"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="580dp"
        android:onClick="googleSignup"
        android:text="google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>